# makemanager3d

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makerfile  README.md  docker-compose.yml  metodo_uso.txt  pyproject.toml
src/: main.py
src/scripts/: wait_for_db.py
