[tool.poetry]
name = "python-base"
version = "0.1.0"
description = "Python project base"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"

# Dependencias opcionales (instalar según necesidad)
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
python-multipart = "^0.0.20"
[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"